Fix footer on mobile devices

--- a/tracks/static/tracks/css/custom.css
+++ b/tracks/static/tracks/css/custom.css
@@ -32,7 +32,6 @@ body {
     margin-bottom: 40px;
 }
 
-
 audio {
     width: 100%
 }
@@ -52,13 +51,13 @@ tr {
 .footer {
     margin-top: 60px;
     width: 100%;
-    height: 80px;
     background-color: #fafafa;
 }
 
 footer > .container {
     padding: 10px 0px;
     background-color: #fafafa;
+    margin-bottom: 0px;
 }
 
 .span-space {
